feat: update second part of presentation

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 					<section>Примеры</section>
 				</section>
 
+
 				<section>
 					<section>2. Динамика координации действий команды</section>
 					<section>
@@ -48,6 +49,7 @@
 						<ul>
 							<li>Настройка husky выдвигала определенные требования к названию коммитов, что позволяло Jira отслеживать статус тех или иных заданий на доске.</li>
 						</ul>
+						<img src="./assets/images/jira-pr-merged.png" width="700" height="300">
 					</section>
 					<section>Коммуникация внутри команды</section>
 					<section>
@@ -67,10 +69,8 @@
 					<section>
 						<p>Реальный пример распределения задач:</p>
 						<ul>
-							<li>
-								Допустим участник команды работал над определенным участком проекта в прошлом спринте
-							</li>
-							<li>И благодаря этому он выбирал себе задания из нового спринта по развитию или улучшению данного участка проекта.</li>
+							<li>Допустим участник команды работал над определенным участком проекта в прошлом спринте</li>
+							<li>Основываясь на этом, он выбирал себе задания из нового спринта по развитию или улучшению данного участка проекта.</li>
 							<li>А это значит, что участник выполнял понятную ему работу и видел четкие цели для ее завершения вовремя</li>
 						</ul>
 					</section>
@@ -84,12 +84,23 @@
 						<p>По результатам обсуждения различных вопросов иногда создавалась мини документация в соответствующих папках дискорд.</p>
 					</section>
 					<section>
-						<p>Реальный пример:</p>
-						<a href="https://discord.com/channels/1128671665119821907/1135870710145876068/1138900779416174793">Ссылка</a>
-						<p>
-							Обсудили бутстрап и в ходе митинга пришли к выводу, что лучше будет инкапсулировать его использование внутри веб компонента. В результате этого, мы пришли к использованию метода shadowroot.adoptedStylesheets 
+						<p>Реальный пример:
+							<a href="https://discord.com/channels/1128671665119821907/1135870710145876068/1138900779416174793">Ссылка</a>
 						</p>
-						<p>(приложить код).</p>
+						<p>
+							Обсудили бутстрап и в ходе митинга пришли к выводу, что лучше будет инкапсулировать его в CSSDOM и использовать ссылку внутри веб компонента с использованием метода shadowroot.adoptedStylesheets 
+						</p>
+						<pre><code data-trim data-noescape class="typescript"><script type="text/template">
+										import { bootstrap } from '../../styles/styles';
+	
+										export default class {
+											private connectedCallback(): void {
+												this.attachShadow({ mode: 'open' });
+												if (this.shadowRoot)
+													this.shadowRoot.adoptedStyleSheets = [bootstrap];
+											}
+										}
+						</script></code></pre>
 					</section>
 					<section>
 						<ul>
@@ -111,11 +122,18 @@
 						<img src="./assets/images/code-disscussion-channel.png" width="450" height="300">
 					</section>
 					<section>
+						<p>Не менее значимым являлся канал “git”, интегрированный с репозиторием.</p>
 						<p>
-							Не менее значимым являлся канал “git”, интегрированный с репозиторием. В нём команда автоматически информировалась о событиях в репозитории, таких как открытие, закрытие или мердж ПРа. Этот канал помогал максимально быстро информировать членов команды о необходимости провести код ревью или о мердже важных изменений.
+							В нём команда автоматически информировалась о событиях в репозитории, таких как открытие, закрытие или мердж PullRequest. Этот канал помогал максимально быстро информировать членов команды о необходимости провести код ревью или о мердже важных изменений.
 						</p>
 					</section>
+					<section>
+						<p>Пример оповещения</p>
+						<img src="./assets/images/discord-github-actions.png" width="700" height="400">
+					</section>
 				</section>
+
+
 				<section>
 					<section>3. Техническая основа и практика GitHub</section>
 					<section>Аналитика GitHub</section>
