feat: update second part of presentation

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
 							<li>Цели спринта</li>
 							<li>Расстановке приоритетов выполнения</li>
 							<li>Готовности участников команды к выполнению той или иной части спринта. </li>
-							<p>В основном каждый выбирал себе часть работы, учитывая свои обязанности в предыдущем спринте и основываясь на своей возможности довести дело до конца в срок.</p>
+							<p>
+							<small>В основном каждый выбирал себе часть работы, учитывая свои обязанности в предыдущем спринте и основываясь на своей возможности довести дело до конца в срок.</small>
 						</ul>
 					</section>
 					<section>
@@ -113,7 +114,8 @@
 							<li>Возникшие проблемы</li>
 							<li>Согласование по изменению частей проекта, имеющих признаки общего использования (Api, Router, Store).</li>
 						</ul>
-						<p>По результатам обсуждения различных вопросов иногда создавалась мини документация в соответствующих папках дискорд.</p>
+						<p></p>
+						<small>По результатам обсуждения различных вопросов часто создавалась мини документация в соответствующих папках дискорд.</small>
 					</section>
 					<section>
 						<p>Реальный пример:
@@ -136,7 +138,7 @@
 					</section>
 					<section>
 						<ul>
-							<p>В конце каждого митинга проводился митинг посвященный:</p>
+							<p>В конце каждого спринта проводился митинг посвященный:</p>
 							<li>Окончанию спринта</li>
 							<li>Ретроспективе</li>
 						</ul>
@@ -148,16 +150,16 @@
 						</ul>
 					</section>
 					<section>
-						<p>
+						<small>
 							Основным рабочим каналом во время спринтов становился канал “code discussion”. В этом канале мы в рабочем режиме могли обсудить ту или иную проблему при написании кода, поделится примером написанного кода и спросить совета по реализации, не дожидаясь при этом митинга.
-						</p>
+						</small>
+						<p></p>
 						<img src="./assets/images/code-disscussion-channel.png" width="450" height="300">
 					</section>
 					<section>
 						<p>Не менее значимым являлся канал “git”, интегрированный с репозиторием.</p>
-						<p>
-							В нём команда автоматически информировалась о событиях в репозитории, таких как открытие, закрытие или мердж PullRequest. Этот канал помогал максимально быстро информировать членов команды о необходимости провести код ревью или о мердже важных изменений.
-						</p>
+						<small>В нём команда автоматически информировалась о событиях в репозитории, таких как открытие, закрытие или мердж PullRequest.</small>
+						<small> Этот канал помогал максимально быстро информировать членов команды о необходимости провести код ревью или о мердже важных изменений.</small>
 					</section>
 					<section>
 						<p>Пример оповещения</p>
