feat: add notes for first part

--- a/index.html
+++ b/index.html
@@ -39,17 +39,22 @@
 						</ul>
 						<aside class="notes">
 							Благодаря командной работе были определены и внедрены автоматические инструменты управлением репозиторием и контролю за выполнению заданиями, автоматическому тестированию. Благодаря созданию разных папок в дискорд ответственных за разные направления разработки и написанию важных инструкций, были исключены потенциальные ошибки и неудобства при работе, также отсутствовали разногласия об формате написания различных частей кода.
-
 						</aside>
 					</section>
 					<section>Примеры</section>
 					<section>
 						<p>Создание стандартного сниппета для веб компонентов</p>
 						<img src="./assets/images/Web-component-snippet.png">
+						<aside class="notes">
+							Это помогло всем членам команде писать код веб компонентов в едином стиле.
+						</aside>
 					</section>
 					<section>
 						<p>Cогласование единых правил код ревью, требований к оформлению PullRequest</p>
 						<img src="./assets/images/Pull-request-example.png">
+						<aside class="notes">
+							Каждый пулл реквест четко описывал, что он делал, содержал ссылки на задания и список выполненых пунктов. Мерж пул реквестов проводился только после двух аппрувов, что обеспечивало минимизацию ошибок и высокий уровень понимания кода у всех участников.
+						</aside>
 					</section>
 					<section>
 						<p>Реализация Redux. Согласовали вместе структуру данных, обеспечивающую бесперебойную работу приложения.</p>
