feat: update second part

--- a/index.html
+++ b/index.html
@@ -79,13 +79,15 @@
 					<section>
 						<h4>А так же...</h4>
 						<ul>
-							<li>Настройка husky выдвигала определенные требования к названию коммитов, что позволяло Jira отслеживать статус тех или иных заданий на доске.</li>
+							<li>Определенные требования к названию коммитов.</li>
 						</ul>
+						<aside class="notes">Настройка husky выдвигала определенные требования к названию коммитов, что позволяло Jira отслеживать статус тех или иных заданий на доске.</aside>
 						<img src="./assets/images/jira-pr-merged.png" width="700" height="300">
 					</section>
 					<section>Коммуникация внутри команды</section>
 					<section>
-						<p>Процесс разработки состоял из ежедневных митингов, организация и процесс которых базировался на методологии Agile/Scrum.</p>
+						<p>Процесс разработки базировался на методологии Agile/Scrum.</p>
+						<aside class="notes">Процесс разработки состоял из ежедневных митингов, организация и процесс которых базировался на методологии Agile/Scrum.</aside>
 					</section>
 					<section>
 						<p>
@@ -96,7 +98,9 @@
 							<li>Расстановке приоритетов выполнения</li>
 							<li>Готовности участников команды к выполнению той или иной части спринта. </li>
 							<p>
-							<small>В основном каждый выбирал себе часть работы, учитывая свои обязанности в предыдущем спринте и основываясь на своей возможности довести дело до конца в срок.</small>
+							<aside class="notes">
+								В основном каждый выбирал себе часть работы, учитывая свои обязанности в предыдущем спринте и основываясь на своей возможности довести дело до конца в срок.
+							</aside>
 						</ul>
 					</section>
 					<section>
@@ -115,15 +119,20 @@
 							<li>Согласование по изменению частей проекта, имеющих признаки общего использования (Api, Router, Store).</li>
 						</ul>
 						<p></p>
-						<small>По результатам обсуждения различных вопросов часто создавалась мини документация в соответствующих папках дискорд.</small>
+						<aside class="notes">
+							По результатам обсуждения различных вопросов часто создавалась мини документация в соответствующих папках дискорд.
+						</aside>
 					</section>
 					<section>
 						<p>Реальный пример:
-							<a href="https://discord.com/channels/1128671665119821907/1135870710145876068/1138900779416174793">Ссылка</a>
+							<a href="https://discord.com/channels/1128671665119821907/1135870710145876068/1138900779416174793">Ссылка на обсуждение</a>
 						</p>
 						<p>
-							Обсудили бутстрап и в ходе митинга пришли к выводу, что лучше будет инкапсулировать его в CSSDOM и использовать ссылку внутри веб компонента с использованием метода shadowroot.adoptedStylesheets 
+							Использование Bootstrap в проекте
 						</p>
+						<aside class="notes">
+							По результатам обсуждения различных вопросов часто создавалась мини документация в соответствующих папках дискорд.
+						</aside>
 						<pre><code data-trim data-noescape class="typescript"><script type="text/template">
 										import { bootstrap } from '../../styles/styles';
 	
@@ -151,15 +160,20 @@
 					</section>
 					<section>
 						<small>
-							Основным рабочим каналом во время спринтов становился канал “code discussion”. В этом канале мы в рабочем режиме могли обсудить ту или иную проблему при написании кода, поделится примером написанного кода и спросить совета по реализации, не дожидаясь при этом митинга.
+							Основным рабочим каналом во время спринтов становился канал “code discussion”.
 						</small>
+						<aside class="notes">
+							По результатам обсуждения различных вопросов часто создавалась мини документация в соответствующих папках дискорд.
+						</aside>
 						<p></p>
 						<img src="./assets/images/code-disscussion-channel.png" width="450" height="300">
 					</section>
 					<section>
 						<p>Не менее значимым являлся канал “git”, интегрированный с репозиторием.</p>
-						<small>В нём команда автоматически информировалась о событиях в репозитории, таких как открытие, закрытие или мердж PullRequest.</small>
-						<small> Этот канал помогал максимально быстро информировать членов команды о необходимости провести код ревью или о мердже важных изменений.</small>
+						<aside class="notes">
+							В нём команда автоматически информировалась о событиях в репозитории, таких как открытие, закрытие или мердж PullRequest.
+							Этот канал помогал максимально быстро информировать членов команды о необходимости провести код ревью или о мердже важных изменений.
+						</aside>
 					</section>
 					<section>
 						<p>Пример оповещения</p>
